--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-gifted-charts": "^1.3.2",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-safe-area-context": "^4.6.4",
+    "react-native-svg": "^13.9.0",
     "react-redux": "^8.1.1"
   },
   "devDependencies": {
