--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@react-navigation/native": "^6.1.7",
     "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-native": "0.72.1",
     "react-native-gifted-charts": "^1.3.2",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-svg": "^13.9.0",
-    "react-redux": "^8.1.1"
+    "react-redux": "^8.1.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
