--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
+  "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components/*"],
       "@store/*": ["src/store/*"],
@@ -12,6 +13,5 @@
       "@utils/*": ["src/utils/*"],
       "@assets/*": ["src/assets/*"]
     }
-  },
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  }
 }
