--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-gifted-charts": "^1.3.2",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-safe-area-context": "^4.6.4",
+    "react-native-screens": "^3.22.1",
     "react-native-svg": "^13.9.0",
     "react-redux": "^8.1.1",
     "zod": "^3.21.4"
@@ -52,6 +53,7 @@
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-babel-module": "^5.3.2",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.5.1",
