--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,6 +56,7 @@
     "import/no-unresolved": "error",
     "class-methods-use-this": "off",
     "react/jsx-props-no-spreading": "off",
-    "react/require-default-props": "off"
+    "react/require-default-props": "off",
+    "jsx-a11y/anchor-is-valid": "off"
   }
 }
