--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-native": "0.72.1",
+    "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-gifted-charts": "^1.3.2",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-safe-area-context": "^4.6.4",
