--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -57,6 +57,7 @@
     "class-methods-use-this": "off",
     "react/jsx-props-no-spreading": "off",
     "react/require-default-props": "off",
-    "jsx-a11y/anchor-is-valid": "off"
+    "jsx-a11y/anchor-is-valid": "off",
+    "global-require": "off"
   }
 }
